# Lab-Seminar-2---MLOps-with-FastAPI-Fertility-Predictor-App-

./: expected_columns.pkl  main.ipynb  main.py  model.pkl  pyproject.toml
