[project]
name = "seminar2"
version = "0.1.0"
description = ""
authors = [
    {name = "vtyric",email = "misha.torno@gmail.com"}
]
[tool.poetry.dependencies]
python = "^3.9"
ucimlrepo = "*"
scikit-learn = "^1.2"
numpy = "^1.23"
fastapi = "^0.95"
uvicorn = "^0.22"
pandas = "^2.2.3"
jupyter = "^1.1.1"

[tool.poetry.dev-dependencies]
pytest = "^7.2"
